<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/textView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#444054"
        android:gravity="center|top"
        android:text="@string/rookMazeGame_title"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/startGame_button"
        android:layout_width="298dp"
        android:layout_height="130dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="57dp"
        android:onClick="startMazeGame"
        android:text="@string/startGame_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/difficulty1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/difficulty1_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGame_button" />

    <Button
        android:id="@+id/difficulty2Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="14dp"
        android:text="@string/difficulty2_button"
        app:layout_constraintEnd_toStartOf="@+id/difficulty3Button"
        app:layout_constraintStart_toEndOf="@+id/difficulty1Button"
        app:layout_constraintTop_toBottomOf="@+id/startGame_button" />

    <Button
        android:id="@+id/difficulty3Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="57dp"
        android:text="@string/difficulty3_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGame_button" />

    <VideoView
        android:id="@+id/instructions_videoView"
        android:layout_width="365dp"
        android:layout_height="289dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playVideo_button" />

    <Button
        android:id="@+id/playVideo_button"
        android:layout_width="364dp"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="15dp"
        android:text="@string/playVideo_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficulty2Button" />
</androidx.constraintlayout.widget.ConstraintLayout>