<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#444054">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="384dp"
        android:layout_height="462dp"
        android:layout_marginTop="41dp"
        android:layout_marginBottom="86dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/expectedMoveCounter_textView"/>

    <TextView
        android:id="@+id/levelName_textView"
        android:layout_width="328dp"
        android:layout_height="46dp"
        android:gravity="center"
        android:text="@string/levelName_textView_default"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/moveCounter_textView"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="616dp"
        android:gravity="center"
        android:text="@string/moveCounter_defaultM0ves"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelName_textView" />

    <TextView
        android:id="@+id/expectedMoveCounter_textView"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="41dp"
        android:layout_marginBottom="616dp"
        android:gravity="center"
        android:text="@string/moveCounter_default"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/levelName_textView" />

    <Button
        android:id="@+id/mute_button"
        android:layout_width="76dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="8dp"
        android:text="@string/mute_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/unmute_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout" />

    <Button
        android:id="@+id/unmute_button"
        android:layout_width="109dp"
        android:layout_height="41dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:layout_marginBottom="8dp"
        android:text="@string/unmute_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/restartGame_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/mute_button"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout" />

    <Button
        android:id="@+id/restartGame_button"
        android:layout_width="109dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="8dp"
        android:text="@string/resetGame_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/unmute_button"
        app:layout_constraintTop_toBottomOf="@+id/mainLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>